cmake_minimum_required(VERSION 3.17)
project(cpp_labs)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_labs_3_1__24 3-1/24.cpp)
add_executable(cpp_labs_3_1__23 3-1/23.cpp)
add_executable(cpp_labs_3_1__22 3-1/22.cpp)
add_executable(cpp_labs_3_1__21 3-1/21.cpp)
add_executable(cpp_labs_3_1__20 3-1/20.cpp)
add_executable(cpp_labs_3_1__19 3-1/19.cpp)
add_executable(cpp_labs_3_1__18 3-1/18.cpp)
add_executable(cpp_labs_3_1__17 3-1/17.cpp)
add_executable(cpp_labs_3_1__16 3-1/16.cpp)
add_executable(cpp_labs_3_1__15 3-1/15.cpp)
add_executable(cpp_labs_3_1__14 3-1/14.cpp)
add_executable(cpp_labs_3_1__13 3-1/13.cpp)
add_executable(cpp_labs_3_1__12 3-1/12.cpp)

add_executable(cpp_labs_3_2__6 3-2/6.cpp)
add_executable(cpp_labs_3_2__5 3-2/5.cpp)
add_executable(cpp_labs_3_2__4 3-2/4.cpp)
add_executable(cpp_labs_3_2__3v 3-2/3v.cpp)
add_executable(cpp_labs_3_2__3b 3-2/3b.cpp)
add_executable(cpp_labs_3_2__3a 3-2/3a.cpp)

add_executable(cpp_labs_3_3__10 3-3/10.cpp)
add_executable(cpp_labs_3_3__9 3-3/9.cpp)
add_executable(cpp_labs_3_3__8 3-3/8.cpp)
add_executable(cpp_labs_3_3__7 3-3/7.cpp)
add_executable(cpp_labs_3_3__6 3-3/6.cpp)
add_executable(cpp_labs_3_3__5 3-3/5.cpp)

add_executable(cpp_labs_3_4__7 3-4/7.cpp)
add_executable(cpp_labs_3_4__8a 3-4/8a.cpp)
add_executable(cpp_labs_3_4__8b 3-4/8b.cpp)
add_executable(cpp_labs_3_4__8c 3-4/8c.cpp)
add_executable(cpp_labs_3_4__9 3-4/9.cpp)
add_executable(cpp_labs_3_4__10 3-4/10.cpp)
add_executable(cpp_labs_3_4__11 3-4/11.cpp)
add_executable(cpp_labs_3_4__12 3-4/12.cpp)

add_executable(cpp_labs_3_5__2e 3-5/2e.cpp)
add_executable(cpp_labs_3_5__3 3-5/3.cpp)
add_executable(cpp_labs_3_5__4 3-5/4.cpp)
add_executable(cpp_labs_3_5__5a 3-5/5a.cpp)
add_executable(cpp_labs_3_5__5b 3-5/5b.cpp)
add_executable(cpp_labs_3_5__5c 3-5/5c.cpp)